Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-972

server shouldn't log a message to console each time a client connects

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0
    • None
    • None
    • 3
    • 4753

      Each time i unmount/remount a client, i see the following message on my combo MDT/OST server:

      Lustre: 15619:0:(ldlm_lib.c:871:target_handle_connect()) MGS: connection from 1ab2d9ae-7ad1-f922-daaf-3ba6549f94db@10.10.4.12@tcp t0 exp (null) cur 1326111941 last 0
      Lustre: 15619:0:(ldlm_lib.c:871:target_handle_connect()) Skipped 3 previous similar messages
      
      int target_handle_connect(struct ptlrpc_request *req)
      {
      [...]
              CWARN("%s: connection from %s@%s %st"LPU64" exp %p cur %ld last %ld\n",
                     target->obd_name, cluuid.uuid, libcfs_nid2str(req->rq_peer.nid),
                    target->obd_recovering ? "recovering/" : "", data->ocd_transno,
                    export, (long)cfs_time_current_sec(),
                    export ? (long)export->exp_last_request_time : 0);
      

      I think such messages should be prohibited and just moved to D_INFO or D_HA, since it will flood the server logs on large cluster.

            mdiep Minh Diep - TLC
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: