LU-972 ldlm: reduce server log message everytime client connect

Changed to D_HA to reduce the messages
Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Change-Id: Ief4507ef484369b6a7aafb7ce9b1f1e0b1f0967e
Reviewed-on: http://review.whamcloud.com/1944
Tested-by: Hudson
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mikhail Pershin <tappro@whamcloud.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>